# flake8-one-variable-check

./: README.md  pyproject.toml
src/: flake8_one_letter_variables.py  setup.py
tests/: test_olv001.py
